fix: :adhesive_bandage: fixing swagger docs implementation

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^7.6.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "ts-json-schema-generator": "^2.3.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
