--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
